--- a/output.css
+++ b/output.css
@@ -15,6 +15,7 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-3xl: 48rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -444,6 +445,24 @@
   .col-span-full {
     grid-column: 1 / -1;
   }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
+  }
   .-mx-1 {
     margin-inline: calc(var(--spacing) * -1);
   }
@@ -606,6 +625,9 @@
   .w-screen {
     width: 100vw;
   }
+  .max-w-3xl {
+    max-width: var(--container-3xl);
+  }
   .max-w-\[70\%\] {
     max-width: 70%;
   }
@@ -713,6 +735,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
@@ -829,6 +854,12 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-\[linear-gradient\(to_bottom\,_\#e9ddbb\,_\#aa9448\)\] {
+    background-image: linear-gradient(to bottom, #e9ddbb, #aa9448);
+  }
+  .bg-\[url\(\'\.\/assets\/elements\/background-atm-invitren\.jpg\'\)\] {
+    background-image: url('./assets/elements/background-atm-invitren.jpg');
+  }
   .bg-cover {
     background-size: cover;
   }
@@ -916,6 +947,9 @@
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
   }
+  .pb-30 {
+    padding-bottom: calc(var(--spacing) * 30);
+  }
   .text-center {
     text-align: center;
   }
@@ -1000,6 +1034,10 @@
   }
   .opacity-50 {
     opacity: 50%;
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -1817,6 +1855,18 @@ html, body {
 .font-great {
   font-family: "Great Vibes", cursive;
 }
+.font-montecarlo {
+  font-family: "MonteCarlo", cursive;
+}
+.font-pinyon {
+  font-family: "Pinyon Script", cursive;
+}
+.font-parisienne {
+  font-family: "Parisienne", cursive;
+}
+.font-carattere {
+  font-family: "Carattere", cursive;
+}
 .font-hurricane {
   font-family: "Hurricane", cursive;
 }
@@ -1923,6 +1973,99 @@ html, body {
     transform: none;
     opacity: 1;
   }
+}
+.book {
+  position: relative;
+  display: flex;
+  margin: auto;
+  width: 40cqmin;
+  pointer-events: none;
+  transform-style: preserve-3d;
+  transition: translate 1s;
+  translate: calc(min(var(--c), 1) * 50%) 0%;
+  rotate: 1 0 0 30deg;
+}
+.page {
+  --thickness: 4;
+  flex: none;
+  display: flex;
+  width: 100%;
+  font-size: 2cqmin;
+  pointer-events: all;
+  user-select: none;
+  transform-style: preserve-3d;
+  transform-origin: left center;
+  transition: transform 1s, rotate 1s ease-in calc((min(var(--i), var(--c)) - max(var(--i), var(--c))) * 50ms);
+  translate: calc(var(--i) * -100%) 0px 0px;
+  transform: translateZ( calc((var(--c) - var(--i) - 0.5) * calc(var(--thickness) * .23cqmin)));
+  rotate: 0 1 0 calc(clamp(0, var(--c) - var(--i), 1) * -180deg);
+}
+.front, .back {
+  position: relative;
+  flex: none;
+  width: 100%;
+  backface-visibility: hidden;
+  overflow: hidden;
+  background-color: #fff;
+  translate: 0px;
+}
+.back {
+  translate: -100% 0;
+  rotate: 0 1 0 180deg;
+}
+.book {
+  counter-reset: page -1;
+  & a {
+    color: inherit;
+  }
+}
+.page {
+  box-shadow: 0em .5em 1em -.2em #00000020;
+}
+.front, .back {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  padding: 2em;
+  border: 1px solid #0002;
+  &:has(img) {
+    padding: 0;
+  }
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  &::after {
+    position: absolute;
+    bottom: 1em;
+    counter-increment: page;
+    content: counter(page) ".";
+    font-size: 0.8em;
+  }
+}
+.cover {
+  &::after {
+    content: "";
+  }
+}
+.front {
+  &::after {
+    right: 1em;
+  }
+  background: linear-gradient(to left, #f7f7f7 80%, #eee 100%);
+  border-radius: .1em .5em .5em .1em;
+}
+.back {
+  &::after {
+    left: 1em;
+  }
+  background-image: linear-gradient(to right, #f7f7f7 80%, #eee 100%);
+  border-radius: .5em .1em .1em .5em;
+}
+.cover {
+  background: radial-gradient(circle farthest-corner at 80% 20%, hsl(150 80% 20% / .3) 0%, hsl(170 60% 10% / .1) 100%), hsl(231, 32%, 29%) url("./assets/mempelai/m-2.jpeg") 50% / cover;
+  color: hsl(200 30% 98%);
 }
 @property --tw-translate-x {
   syntax: "*";
